# claude-dashboard

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  release-please-config.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  release-please.yml  release.yml  update-pricing.yml
scripts/: filter_pricing.py  install.sh
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/api/: mod.rs
src/data/: mod.rs  plugins.rs  projects.rs  sessions.rs  settings.rs  stats.rs  todos.rs  usage.rs
src/tui/: app.rs  mod.rs
src/tui/tabs/: mod.rs  plugins.rs  projects.rs  sessions.rs  settings.rs  stats.rs  todos.rs  usage.rs
tests/: api_integration.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/public/: theme-init.js
web/src/: App.tsx  api.ts  export.ts  fs-access.ts  hashRoute.ts  index.css  main.tsx  opfs.ts  persistence.ts  pwa.ts  sync.ts
web/src/components/: InfoHint.tsx  PrivacyBadge.tsx  SearchInput.tsx  SectionHeader.tsx  StatCard.tsx  SubTabBar.tsx  SupportButton.tsx  ThemeSwitcher.tsx
web/src/cost/: budget.ts  pricing.json  types.ts
web/src/online/: api.ts  config.ts  types.ts
web/src/pages/: Account.tsx  Activity.tsx  Analytics.tsx  Config.tsx  Customizations.tsx  Insights.tsx  LiveUsageCard.tsx  OnlineModeSettings.tsx  Overview.tsx  Plugins.tsx  Projects.tsx  Reports.tsx  Sessions.tsx  Settings.tsx  Stats.tsx  Todos.tsx  Trends.tsx  Usage.tsx
web/src/pages/insights/: Forecast.tsx  Heatmap.tsx  WhatIf.tsx
web/src/test/: api.test.ts  cost.test.ts  fixtures.ts
web/src/test/components/: SectionHeader.test.tsx  StatCard.test.tsx
web/src/theme/: colors.ts  index.ts  themes.ts
web/src/types/: file-system-access.d.ts
web/src/worker/: parser.worker.ts
(+7 files in other folders)
