[package]
name = "claude-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_dashboard"
path = "src/lib.rs"

[[bin]]
name = "claude-dashboard"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-util = { version = "0.7", features = ["codec"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
