[package]
name = "claude-analytics"
version = "0.1.0"
edition = "2021"
description = "WASM analytics for Claude Dashboard — forecasting, anomaly detection, reports"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
